--- a/.travis.yaml
+++ b/.travis.yaml
@@ -1,8 +1,10 @@
 language: node_js
-sudo: false
+
 node_js:
-  - "4.1"
-install:
-  - npm install
-script:
-  - npm test
+  - 'lts/*'
+
+cache:
+  directories:
+    - node_modules
+
+sudo: false
